# HLVL

./: .gitignore  CMakeLists.txt  README.md  generate_headers.zsh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  allocation.cpp  allocator.cpp  context.cpp  device.cpp  ecscontroller.cpp  entitymanager.cpp  iwindow.cpp  materials.cpp  objects.cpp  renderer.cpp  resource.cpp  settings.cpp  signature.cpp  stagingbuffer.cpp  vertex.cpp  vkbuilders.cpp  vkfactory.cpp
src/core/include/: allocation.hpp  allocator.hpp  components.hpp  components_decl.hpp  context.hpp  context_decl.hpp  device.hpp  ecscontroller.hpp  ecscontroller_decl.hpp  entitymanager.hpp  interface.hpp  interface_decl.hpp  iwindow.hpp  iwindow_decl.hpp  materials.hpp  objects.hpp  renderer.hpp  resource.hpp  resource_decl.hpp  settings.hpp  settings_decl.hpp  signature.hpp  stagingbuffer.hpp  systems.hpp  systems_decl.hpp  vertex.hpp  vkbuilders.hpp  vkfactory.hpp
src/hlvl/: CMakeLists.txt  context.cpp  settings.cpp
src/hlvl/include/: context.hpp  settings.hpp
src/linalg/: CMakeLists.txt  mat.cpp  vec.cpp
src/linalg/include/: mat.hpp  vec.hpp
src/windows/: CMakeLists.txt  glfw.cpp
src/windows/include/: glfw.hpp
tests/: CMakeLists.txt  end_to_end.cpp  main.cpp  test_classes.hpp  u_allocator.cpp  u_componentmanager.cpp  u_context.cpp  u_controller.cpp  u_entitymanager.cpp  u_mat.cpp  u_obj.cpp  u_settings.cpp  u_systemmanager.cpp  u_vec.cpp
tests/shaders/: camera.comp  camera.frag  camera.vert  cube.frag  cube.vert  rectangle.frag  rectangle.vert  triangle.frag  triangle.vert  wall.frag  wall.vert
