cmake_minimum_required(VERSION 3.21.0)

set(HLVL_VERSION_MAJOR 0)
set(HLVL_VERSION_MINOR 123)
set(HLVL_VERSION_PATCH 5)

project(HLVL
  VERSION ${HLVL_VERSION_MAJOR}.${HLVL_VERSION_MINOR}.${HLVL_VERSION_PATCH}
  LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")

add_subdirectory(${CMAKE_SOURCE_DIR}/src)
add_subdirectory(${CMAKE_SOURCE_DIR}/tests)